--- a/.env.example.laravel-ci
+++ b/.env.example.laravel-ci
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=testing
+APP_KEY=base64:UA/IQumBREQ/KYjV61pCuxOqbKf8lQG4UZm1AJsCgnE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -15,12 +15,12 @@ LOG_CHANNEL=daily
 #DB_PASSWORD=
 
 #PostgreSQL
-DB_CONNECTION=pgsql
-DB_HOST=postgres
-DB_PORT=5432
-DB_DATABASE=larasns
-DB_USERNAME=default
-DB_PASSWORD=secret
+#DB_CONNECTION=pgsql
+#DB_HOST=postgres
+#DB_PORT=5432
+#DB_DATABASE=larasns
+#DB_USERNAME=default
+#DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
