--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - checkout
       - run: sudo composer self-update --1
       - run: composer install -n --prefer-dist
+      - run: cp .env.example.testing .env.testing
       - run: npm ci
       - run: npm run dev
       - run:
