CIはcomposerをキャッシュするように記述

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,14 @@ jobs:
     steps:
       - checkout
       - run: sudo composer self-update --1
+      - restore_cache:
+          key: composer-v1-{{ checksum "composer.lock" }}
       - run: composer install -n --prefer-dist
       - run: cp .env.example.testing .env.testing
+      - save_cache:
+          key: composer-v1-{{ checksum "composer.lock" }}
+          paths:
+            - vendor
       - run: npm ci
       - run: npm run dev
       - run:
