--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       DB_PASSWORD: secret
     steps:
       - checkout
+      - run: cp .env.example.testing .env.testing
       - run: sudo composer self-update --1
       - restore_cache:
           key: composer-v1-{{ checksum "composer.lock" }}
